DB problem solved